--- a/NGL_studio_Manon_Hassnaoui/app/src/main/res/layout/activity_inscription_activity.xml
+++ b/NGL_studio_Manon_Hassnaoui/app/src/main/res/layout/activity_inscription_activity.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_inscription"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.manon.ngl_studio_manon_hassnaoui.MainActivity">
+    tools:context="com.example.manon.ngl_studio_manon_hassnaoui.inscription_activity">
 
     <EditText
         android:layout_width="wrap_content"
@@ -17,33 +17,28 @@
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
-        android:id="@+id/login_utilisateur" />
+        android:layout_marginTop="97dp"
+        android:id="@+id/creation_pseudo"
+        android:text="entrez un pseudo" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:layout_below="@+id/login_utilisateur"
-        android:layout_alignStart="@+id/login_utilisateur"
-        android:layout_marginTop="43dp"
-        android:id="@+id/mdp_utilisateur" />
-
-    <Button
-        android:text="connexion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:id="@+id/connexion"
-        android:layout_below="@+id/mdp_utilisateur"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/creation_pseudo"
+        android:layout_alignEnd="@+id/creation_pseudo"
+        android:layout_marginTop="52dp"
+        android:id="@+id/creation_mdp"
+        android:contentDescription=",k," />
 
     <Button
         android:text="inscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/inscription"
-        android:layout_below="@+id/connexion"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="48dp"
+        android:id="@+id/enregistrement_inscription"
+        android:layout_below="@+id/creation_mdp"
+        android:layout_centerHorizontal="true"
+        android:onClick="inscription_click"/>
 </RelativeLayout>
